feat(nocodb): map swagger schema for api payload validation
